--- a/SqlIntro/SqlIntro.csproj
+++ b/SqlIntro/SqlIntro.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper.StrongName" Version="1.50.4" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.0.1" />
     <PackageReference Include="MySql.Data" Version="6.10.6" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
